modificando a lista, agora so aparece a capa e botoes

--- a/cine-ui/src/app/components/movie-list/movie-list.html
+++ b/cine-ui/src/app/components/movie-list/movie-list.html
@@ -15,8 +15,13 @@
         class="cover"
         routerLink="/movies/{{ movie.ID }}"
       />
-      <h3>{{ movie.title }} ({{ movie.release_year }})</h3>
-      <h2>👤 {{ movie.who_chose }}</h2>
+        <button (click)="toggleWatched(movie.ID)" class="toggle-button">
+      @if(movie.watched){
+          ✅ Já visto
+        }@else {
+          ❌ Não visto
+      }
+        </button>
       <footer class="actions">
         <button class="edit-button" (click)="edit(movie.ID)">Editar</button>
         <button class="delete-button" (click)="delete(movie.ID)">
